<resources>
    <string name="app_name">God Price</string>
    <string name="temples_activity_name">Temples</string>
    <string name="places_activity_name">Places</string>
    <string name="restaurants_activity_name">Restaurants</string>
    <string name="temples_category">Shoes</string>
    <string name="places_category">Pants</string>
    <string name="restaurants_category">Case</string>
    <string name="monuments_category">Accessories</string>
    <string name="outing_category">Wallet</string>
    <string name="header_name">God Price</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="about_industry">About GodPrice</string>
    <string name="choose_image_profile">Choose</string>
    <string name="home">Home</string>
    <string name="button_details_text">View More</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_details_name">Alan Jones Full Sleeve Solid Mens Sweatshirt</string>
    <string name="product_price">$ 200</string>
    <string name="women_outwear">Women Outwear</string>
    <string name="color_text">Color</string>
    <string name="size_text">Size</string>
    <string name="blue_color_text">Blue</string>
    <string name="red_color_text">Red</string>
    <string name="green_text">Green</string>
    <string name="small_size_text">S</string>
    <string name="medium_color_text">M</string>
    <string name="large_text">L</string>
    <string name="xtra_large_text">XL</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="rating_count">Reviews</string>
    <string name="description_heading">Description</string>
    <string name="description_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="reviewer_name">Jacky Chain</string>
    <string name="review_text">Nice product</string>
    <string name="ratings_reviews_text">Ratings &amp; Reviews</string>
    <string name="related_products_heading">Related Products</string>
    <string name="search_items">Search Items</string>
    <string name="search_box_hint">Search for products, brand and more</string>
    <string name="homepage_heading">Fashion picks from emerging brands</string>
    <string name="homepage_heading_two">Your Recommendations</string>
    <string name="listview_homepage_heading">Deals of the Day</string>
    <string name="listview_homepage_heading_two">Recommended Product</string>
    <string name="listview_homepage_heading_three">Trending Product</string>
    <string name="see_more">See More</string>
    <string name="less_than_sign">></string>
    <string name="cart_menu_icon">Cart</string>
    <string name="sign_in_menu_icon">Sign In</string>
    <string name="grid_category_heading">Top Category</string>
    <string name="grid_category_heading_two">Recommended Category</string>
    <string name="grid_category_heading_three">Featured Category</string>
    <string name="please_enter_detail_here">Please Enter Details Here</string>
    <string name="enter_your_name">Enter Your Name*</string>
    <string name="enter_your_email">Enter Your Email*</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number*</string>
    <string name="enter_your_password">Enter Your Password*</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_account_sign_in">Already have account? Click here</string>
    <string name="todo">TODO</string>
    <string name="signin_here">Please sign in here</string>
    <string name="category_item_drawer_menu">Category wise</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="profile">My Profile</string>
    <string name="update">UPDATE</string>
    <string name="checkout_address_header">Checkout Address</string>
    <string name="billing_address">1. Billing Address</string>
    <string name="review_order">2. Review Order</string>c
    <string name="payment">3. Payment</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="full_name_checkout">Full Name*</string>
    <string name="phone_number_checkout">Phone Number*</string>
    <string name="email_address_checkout">E-Mail Address*</string>
    <string name="alt_phone_no_checkout">Alternative Phone NO.</string>
    <string name="country_checkout">Country*</string>
    <string name="city_checkout">City*</string>
    <string name="zip_code_checkout">ZIP code*</string>
    <string name="address_two_checkout">Address*</string>
    <string name="order_summary_checkout">Order Summary</string>
    <string name="save_deliver_here_checkout">SAVE AND DELIVER HERE</string>
    <string name="cart_total_checkout">Cart Total:</string>
    <string name="wallet_amount_checkout">Wallet Amount</string>
    <string name="amount_pay_checkout">Amount To Pay</string>
    <string name="dollar_sign">$ 100</string>
    <string name="dollar_sign_zero">$ 50</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_address_heading">Shipping Address</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="quantity_review_order">Quantity: 1</string>
    <string name="quantity_value">1</string>
    <string name="review_order_heading">Review Order</string>
    <string name="payment_done">You have successfully placed your order.</string>
    <string name="wallet_payment_not">You do not have enough amount on your wallet, please contact support.</string>
    <string name="payment_heading">Payment</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="wishlist_heading">Favourite List</string>
    <string name="wishlist_remove_product_icon">X</string>
    <string name="product_price_whistlist">$799.00</string>
    <string name="product_sku_whistlist">SKU: #12345</string>
    <string name="product_specification">Product Specification</string>
    <string name="specification_heading">Specification Heading</string>
    <string name="specification_value">Specification Value</string>
    <string name="specification_heading_two">RAM</string>
    <string name="specification_value_two">2 GB</string>
    <string name="specification_heading_three">Screen Size</string>
    <string name="specification_value_three">15 inch</string>
    <string name="specification_heading_four">Color</string>
    <string name="specification_value_four">Black</string>
    <string name="specification_heading_five">Hard disk</string>
    <string name="specification_value_five">500 GB</string>
    <string name="specification_heading_six">Back Camera</string>
    <string name="specification_value_six">5 MP</string>
    <string name="specification_heading_seven">Front Camera</string>
    <string name="specification_value_seven">2 MP</string>
    <string name="product_details">Product</string>
    <string name="order_history">Recent Order</string>
    <string name="purchased_history_text">Purchased</string>
    <string name="purchased_date">Dec 05, 2018</string>
    <string name="order_id">OrderId: 123456789</string>
    <string name="order_total">Order Total</string>
    <string name="order_status">Status</string>
    <string name="order_cancelled">Cancelled</string>
    <string name="order_delivered">Delivered</string>
    <string name="order_view_invoice">View Invoice</string>
    <string name="quantity_text">Quantity:</string>
    <string name="bt_google_signin">Sign in with Google</string>
    <string name="cart_subtotal">Cart Subtotal</string>
    <string name="cart_items">item\'s</string>
    <string name="cart_total_amount">Total amount</string>
    <string name="cart_update">Update</string>
    <string name="cart_delete">Delete</string>
    <string name="view_products">View Products</string>
    <string name="price_dollar_detail">$</string>
    <string name="product_sku_detail">SKU:</string>
    <string name="pirates">Pirates</string>
    <string name="ninjas">Ninjas</string>
    <string name="cart_id">Id:</string>
    <string name="serial_no">S#</string>
    <string name="invoice_no">Invoice#</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="order_history_detail_view">View</string>
    <string name="full_name">Full name : </string>
    <string name="email">Email : </string>
    <string name="mobile">Mobile : </string>
    <string name="address">Address : </string>
    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="zipcode">Zip code : </string>
    <string name="alternate_contact_no">Alt. Contact No : </string>
    <string name="total_amount">Total Amount</string>
    <string name="billing_address_order_detail">Billing Address</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Qty</string>
    <string name="sub_total">Sub Total</string>
    <string name="color_label">Color: </string>
    <string name="size_label">Size: </string>
    <string name="back_label">Back</string>
    <string name="master_category">Categories</string>
    <string name="brand_name">Fanideaz</string>
    <string name="price_range">PRICE RANGE</string>
    <string name="filter_by_brand">FILTER BY BRAND</string>
    <string name="size_label_filter">SIZE</string>
    <string name="color_label_filter">COLOR</string>
    <string name="filter_button_submit">FILTER</string>
    <string name="filter_color_placeholder">White</string>
    <string name="filter_size_placeholder">XL</string>
    <string name="transaction_heading">My Transaction</string>
    <string name="transaction_id">Transaction#</string>
    <string name="for_heading">For</string>
    <string name="event_heading">Event</string>
    <string name="transaction_history_heading">Transaction History</string>
    <string name="mode_heading">Mode</string>
    <string name="chat_button_label">Chat</string>
    <string name="amount_heading">Amount</string>
    <string name="date_heading">Date</string>
    <string name="status_heading">Status</string>
    <string name="wallet_amount_label">Wallet Amount:</string>
    <string name="confirm_button">Confirm Order</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="wallet_not_sufficient">You don\'t have sufficient amount in you wallet</string>
    <string name="order_detail_label">Order Detail </string>
    <string name="user_email_header">om@omtatsat.com</string>
    <string name="delivery_drawer">Delivery</string>
    <string name="merchant_signup">Merchant Sign up</string>
    <string name="driver_signup">Driver Sign up</string>
    <string name="merchant_login">Merchant Login</string>
    <string name="driver_login">Driver Login</string>
    <string name="product_name_whistlist">Alan Jones Men\'s Cotton Hooded Sweatshirt</string>
    <string name="facebook_application_id" translatable="false">336835236870096</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb336835236870096</string>
</resources>










