<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_category"
            android:title="@string/category_item_drawer_menu"/>
        <item
            android:id="@+id/nav_product"
            android:title="@string/product_details"/>
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_register"
            android:title="@string/register"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_forgot_password"
            android:title="@string/forgot_password"/>
        <item
            android:id="@+id/nav_change_password"
            android:title="@string/change_password"/>
        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/wishlist_heading"/>
        <item
            android:id="@+id/nav_about_industry"
            android:title="@string/about_industry"/>
        <item
            android:id="@+id/nav_checkout"
            android:title="@string/checkout"/>
        <item
            android:id="@+id/sign_out_menu"
            android:title="@string/sign_out"/>
    </group>
</menu>