<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_master_category"
            android:title="@string/master_category"/>
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_register"
            android:title="@string/register"/>
        <item
            android:id="@+id/nav_forgot_password"
            android:title="@string/forgot_password"/>
    </group>
    <group
        android:id="@+id/nav_footer"
        >
        <item
            android:id="@+id/nav_log_version"
            app:actionLayout="@layout/footer_navigation_menu_without_login" />
    </group>
</menu>


