<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <LinearLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >
    <TextView
        android:id="@+id/serial_no_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_no"
        />
    <TextView
        android:id="@+id/invoice_no_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice_no"
        />
    <TextView
        android:id="@+id/date_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        />
    <TextView
        android:id="@+id/total_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        />
    <TextView
        android:id="@+id/status_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:gravity="center">
    <TextView
        android:id="@+id/serial_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/invoice_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        />
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        />
    </LinearLayout>
    <RelativeLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <Button
            android:id="@+id/action_view"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textSize="9sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:text="@string/order_history_detail_view"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:background="#e53935"
            />
    </RelativeLayout>
</LinearLayout>
