<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:id="@+id/transaction_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#43a047"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/for_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_heading"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/event_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_heading"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/mode_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_heading"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/amount_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_heading"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/date_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_heading"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/status_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_heading"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:id="@+id/transaction_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                />
            <TextView
                android:id="@+id/for_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/event_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/mode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="9dp"
                />
        </LinearLayout>
    </LinearLayout>

