<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailsActivity">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this)-->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
        </android.support.v7.widget.Toolbar>
        <ScrollView
            android:id="@+id/scroll_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="35dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/billing_address_tv"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/shipping_address_heading"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/full_name_tv_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/full_name_checkout"
            />
        <EditText
            android:id="@+id/full_name_et_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/full_name_checkout"/>
        <TextView
            android:id="@+id/phone_number_tv_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/phone_number_checkout"
            />
        <EditText
            android:id="@+id/phone_number_et_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/phone_number_checkout" />
        <TextView
            android:id="@+id/email_tv_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/email_address_checkout"
            />
        <EditText
            android:id="@+id/email_et_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/email_address_checkout"/>
        <TextView
            android:id="@+id/alt_phone_no_tv_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/alt_phone_no_checkout"
            />

        <EditText
            android:id="@+id/alt_phone_no_et_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/alt_phone_no_checkout" />
        <TextView
            android:id="@+id/country_checkout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/country_checkout"
            />
        <EditText
            android:id="@+id/country_checkout_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/country_checkout" />
        <TextView
            android:id="@+id/city_checkout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/city_checkout"
            />

        <EditText
            android:id="@+id/city_checkout_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/city_checkout" />
        <TextView
            android:id="@+id/zip_code_checkout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/zip_code_checkout"
            />

        <EditText
            android:id="@+id/zip_code_checkout_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/zip_code_checkout" />
        <TextView
            android:id="@+id/address_two_checkout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/address_two_checkout"
            />

        <EditText
            android:id="@+id/address_two_checkout_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/address_two_checkout" />
        <LinearLayout
            android:id="@+id/response_message_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:background="@drawable/message_response_shape"
            >
            <TextView
                android:id="@+id/response_message_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="#ffffff"
                />
        </LinearLayout>
        <LinearLayout
        android:id="@+id/response_message_linear_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        android:background="@drawable/message_response_green"
        >
        <TextView
            android:id="@+id/response_message_two_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#ffffff"
            />
    </LinearLayout>
        <Button
            android:id="@+id/save_deliver_here_checkout"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="#e53935"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/save_deliver_here_checkout"/>
</LinearLayout>
</LinearLayout>
        </ScrollView>
    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"/>
</android.support.v4.widget.DrawerLayout>
